# EAP

./: .env.example  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.dashboard  Dockerfile.scheduler  NOTES.md  README.md  USAGE.md  docker-compose.yml  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/api/: __main__.py  app.py  audit.py  auth.py  crud.py  db.py  main.py  schemas.py  settings.py  telemetry.py
apps/api/routers/: alerts.py  dq.py  ingest.py  metrics.py
apps/dashboard/: __init__.py  __main__.py  app.py  components.py  data.py  layout.py  main.py
apps/scheduler/: __main__.py  app.py
eap/: __init__.py  logging.py
jobs/: README.md
jobs/anomaly/: __init__.py  __main__.py  job.py
jobs/dq/: __init__.py  __main__.py  job.py
jobs/metrics/: __init__.py  __main__.py  job.py
jobs/notifications/: __init__.py  __main__.py  job.py
jobs/notify/: __init__.py  __main__.py  job.py
sql/: 001_init.sql
tests/: conftest.py
tests/api/: test_alerts_api.py  test_alerts_lifecycle.py  test_auth.py  test_crud.py  test_crud_errors.py  test_db.py  test_dq_api.py  test_idempotency.py  test_ingest_validation.py  test_metrics_api.py  test_observability.py
tests/dashboard/: test_dashboard_app.py  test_dashboard_components.py  test_dashboard_data.py  test_dashboard_entrypoints.py  test_dashboard_layout.py
tests/jobs/: test_anomaly_job.py  test_dq_job.py  test_metrics_job.py
tests/scheduler/: test_scheduler_app.py
